<resources>
    <string name="app_name">School-SoftDesign</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="btn_green_text">Green</string>
    <string name="btn_red_text">Red</string>
    <string name="btn_blue_text">Blue</string>
    <string name="drawer_menu_profile">Профиль</string>
    <string name="drawer_menu_contacts">Контакты</string>
    <string name="drawer_menu_team">Команда</string>
    <string name="drawer_menu_task">Задачи</string>
    <string name="drawer_menu_settings">Настройки</string>
    <string name="fragment_contacts_textview">Контакты</string>
    <string name="fragment_profile_textview">Профиль</string>
    <string name="fragment_settings_textview">Настройки</string>
    <string name="fragment_task_textview">Задачи</string>
    <string name="fragment_team_textview">Команда</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header_reating">100</string>
    <string name="header_login">Владимир Медянников</string>
    <string name="header_email">vladimir.medyannikov@gmail.com</string>
    <string name="font_medium">sans-serif-medium</string>
    <string name="font_regular">sans-serif</string>
    <string name="fragmet.profile.labelphone">Мобильный</string>
    <string name="fragment.profile.phonevalue">+7 (937) 217-74-65</string>
    <string name="fragment.profile.emailvalue">vladimir.medyannikov@gmail.com</string>
    <string name="fragment.profile.emailtitle">E-mail</string>
    <string name="fragment.profile.vkvalue">http://vk.com/medyannikov</string>
    <string name="fragment.profile.vklabel">Профиль в VK</string>
    <string name="fragment.profile.gitvalue">https://github.com/vladimirmedyannikov/School-SoftDesign</string>
    <string name="fragment.profile.gitlabel">Репозиторий</string>
    <string name="fragment.profile.aboutvalue">Информация о себе</string>
    <string name="fragment.profile.aboutlabel">О себе</string>
    <string name="btn_text_add_team">Добавить команду</string>
    <string name="btn_text_add_user">Добавить пользователя</string>
    <string name="dialog_text_team_name">Название команды</string>
    <string name="dialog_text_user_lastname">Фамилия</string>
    <string name="dialog_text_user_firstname">Имя</string>
</resources>
