<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/navigation_header_height"
    android:background="@drawable/drawer_header"
    android:paddingTop="@dimen/drawer_header_padding"
    android:fitsSystemWindows="true">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/drawer_header_padding">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="@dimen/drawer_avatar_width"
                android:layout_height="@dimen/drawer_avatar_height"
                android:src="@drawable/avatar_image"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/drawing_rating_background"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/imageView">
            </ImageView>

            <TextView
                android:id="@+id/textview_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_reating"
                android:layout_marginTop="@dimen/drawer_rating_margin"
                android:layout_alignLeft="@+id/imageView"
                android:layout_alignTop="@+id/imageView"
                android:layout_alignRight="@+id/imageView"
                android:textAlignment="center"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:minHeight="@dimen/drawer_title_height"
            android:gravity="center_vertical"
            android:id="@+id/linearLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textview_login"
                android:textColor="@color/white"
                android:text="@string/header_login"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textview_email"
                android:text="@string/header_email"
                android:textColor="@color/white"/>
        </LinearLayout>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>